--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 top right no-repeat;
+  background-image: url(../img/bc3.jpeg);
   background-size: cover;
   left: 0;
   right: 0;
@@ -52,13 +52,15 @@ h6 {
   height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url(../img/bc1.jpg);
+  background-image: url(../img/bc.jpg);
   z-index: 997;
   overflow-y: auto;
 
   @media (max-width: 992px) {
-    background-image: url(../img/bc3.jpeg);
+    background-image: url(../img/bg.png);
     background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 }
 
@@ -73,6 +75,10 @@ h6 {
   line-height: 1;
   font-weight: 700;
   font-family: "Poppins", sans-serif;
+
+  @media (max-width: 380px) {
+    text-align: center;
+  }
 }
 
 #header h1 a,
@@ -86,6 +92,10 @@ h6 {
   font-size: 24px;
   margin-top: 20px;
   color: rgba(255, 255, 255, 0.8);
+
+  @media (max-width: 430px) {
+    text-align: center;
+  }
 }
 
 #header h2 span {
